# bosch-flow-mcp

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  glama.json  pyproject.toml
config/: bosch_config.example.json
scripts/: check-no-data.sh
src/bosch_flow_mcp/: api.py  auth.py  cli.py  config.py  db.py  helpers.py  mcp_instance.py
src/bosch_flow_mcp/tools/: activity_tools.py  analysis_tools.py  battery_tools.py  bike_tools.py  component_tools.py  service_tools.py  sync_tools.py
tests/: conftest.py  test_activity_tools.py  test_analysis.py  test_api.py  test_auth.py  test_cli.py  test_config.py  test_db.py  test_helpers.py  test_notes.py  test_routing.py  test_sync.py  test_tools.py
